<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- PREMESSA: 
    	Ci sono sicuramente delle repliche (ad esempio la stringa di salvataggio, 
    	di cancellazione, ecc): questo per garantire, nel futuro, una maggiore 
    	flessibilità (es: se voglio cambiare il titolo della camera, vado a toccare
    	solo quella, non tocco nient'altro)
     -->
    
    <string name="app_name">TouristExplorer</string>
    
    <!-- GENERICI -->
    <string name="filename">Nome del file</string>
    <string name="title">Titolo</string>
    <string name="title_hint">Inserisci un titolo..</string>
    <string name="description">Descrizione</string>
    <string name="description_hint">Inserisci una descrizione..</string>
    <string name="coordinates">Coordinate</string>
    <string name="datetime_comment">Commento salvato il</string>
    <string name="datetime_photo">Foto scattata il</string>
    <string name="datetime_video">Video ripreso il</string>
    <string name="datetime_audio">Audio registrato il</string>
    <string name="videoContentDescription">Video preview</string>
    <string name="photoContentDescription">Photo preview</string>
   	<string name="save">Salva</string>
    <string name="cancel">Cancella</string>
    <string name="ok">OK</string>
    <string name="turn_on_gps">Abilita GPS</string>
    <string name="continue_without_GPS">Continua senza GPS</string>
    <string name="GPS_not_fix">Rilevamento della posizione..</string>
    <string name="GPS_fixed">GPS agganciato</string>
    
    
    <!-- TOOLTIP -->
    <string name="tooltip_start_tracking">Start tracking</string>
    <string name="tooltip_stop_tracking">Stop tracking</string>
    <string name="toolTip_poi">Aggiungi un nuovo Punto di Interesse</string>
    
    
    <!-- Action bar -->
    <string name="actionbar_list">Lista traccie</string>
    <string name="actionbar_tracking">Inizia tracking</string>
    <string name="actionbar_pointOfInterest">Aggiungi un Punto di Interesse (PoI)</string>
    <string name="actionbar_menuPoI_audio">Registra una traccia audio</string>
    <string name="actionbar_menuPoI_photo">Scatta una foto</string>
    <string name="actionbar_menuPoI_video">Registra un video</string>
    <string name="actionbar_menuPoI_comment">Inserisci un commento</string>
     
    
    <!-- AUDIO -->
    <string name="audio_record">Registra</string>
    <string name="audio_stop">Stop</string>
    <string name="audio_title">Titolo</string>
    <string name="audio_title_hint">Inserisci un titolo..</string>
    <string name="audio_description">Descrizione</string>
    <string name="audio_description_hint">Inserisci una descrizione..</string>
    <string name="audio_save">Salva</string>
    <string name="audio_cancel">Cancella</string>
	<string name="audio_record_label">Registrazione audio</string>
    <string name="audio_record_start">Inizia la registrazione</string>
    <string name="audio_record_stop">Ferma la registrazione</string>
    
    
    <!-- CAMERA (sono comuni sia ai video che alle foto) -->
    <string name="camera_title">Titolo</string>
    <string name="camera_title_hint">Inserisci un titolo..</string>
    <string name="camera_description">Descrizione</string>
    <string name="camera_description_hint">Inserisci una descrizione..</string>
    <string name="camera_save">Salva</string>
    <string name="camera_cancel">Cancella</string>
    
   	
    <!-- CAMERA - PHOTO BUTTONS -->
  	<string name="camera_photo_take_picture">Scatta</string>     
    
  	
  	<!-- CAMERA - VIDEO BUTTONS -->
  	<string name="camera_video_record">Registra</string>     
  	<string name="camera_video_stop">Stop</string>     
  	
    
    <!-- COMMENTO -->
    <string name="comment_title">Titolo</string>
    <string name="comment_title_hint">Inserisci un titolo..</string>
    <string name="comment_description">Descrizione</string>
    <string name="comment_description_hint">Inserisci una descrizione..</string>
    <string name="comment_save">Salva</string>
    <string name="comment_cancel">Cancella</string>
    
    
    <!-- EXPORT PATH -->
    <string name="export_path_filename">Assegna un nome al file da esportare</string>
    <string name="export_path_filename_hint">Nome file</string>
    <string name="export_path_export">Esporta</string>
    <string name="export_path_cancel">Cancella</string>
   
    
    <!-- PATH LIST-->
    <string name="path_list_title">Lista tracce salvate</string>
    <string name="path_list_search_hint">Traccia da cercare..</string>
    
    
    <!-- PATH INFO: OK BUTTON -->
    <string name="path_info_ok_ok">OK</string>
    
    
    <!-- PATH INFO: SAVE BUTTONS -->
    <string name="path_info_save_want_to_save">Vuoi salvare la traccia?</string>
    <string name="path_info_save_save">Salva</string>
    <string name="path_info_save_cancel">Cancella</string>

    
    <!-- PHOTO -->
    
    
    
    <!-- PREFERENCES -->
    
    
    
    <!-- SAVE/EXPORT PATH -->
    
    
    
    <!-- SPLASH -->
    
    
    
    <!-- VIDEO -->
    
    
    
    <!--============ CONTEXT MENU ============ -->
    <string name="path_list_show">Visualizza la traccia</string>
    <string name="path_list_export">Esporta la traccia</string>
    <string name="path_list_delete">Elimina la traccia</string>
    <string name="path_list_info">Informazione sulla traccia</string>
    
    
    
    <string name="camera_label">Ferma la registrazione</string>
    
    <string name="save_and_export_label">Salvataggio traccia</string>
    <string name="export_label">Esporta traccia</string>
   	<string name="options_label">Opzioni</string>
  	<string name="comment_label">Commento</string>
  	
    <string name="marker_title_audio">Audio</string>
    <string name="marker_title_video">Video</string>
    <string name="marker_title_photo">Foto</string>
    <string name="marker_title_comment">Commento</string>
   
    <string name="list_paths_title">Lista tracce salvate</string>
    <string name="list_paths_search_hint">Traccia da cercare..</string>
    
   	<string name="modify_poi_header">Modifica Punto di Interesse</string>
    
    <string name="path_info_start_address">Indirizzo di partenza</string>
   	<string name="path_info_finish_address">Indirizzo di arrivo</string>
    <string name="path_info_address_not_available">Indirizzo non disponibile</string>
    <string name="path_info_start_datetime">Data di partenza</string>
    <string name="path_info_finish_datetime">Data di arrivo</string>
    <string name="path_info_track_time">Tempo trascorso</string>
    <string name="path_info_track_speed">Velocità media</string>
    <string name="path_info_total_distance">Distanza percorsa</string>
     
    <string name="show_path_info_title">Informazioni sulla traccia</string>
    
    <string name="poi_deleted">PoI eliminato</string>
    <string name="alert_delete_poi">Vuoi eliminare anche i PoI relativi alla traccia appena eliminata?</string>
        
    <string name="error_provider_unavailable">Impossibile eseguire il tracking. Per favore accendere il gps o una connessione dati."></string>
	<string name="error_no_locations">Impossibile continuare, nessuna locazione trovata!</string>
	<string name="error_no_image">Nessuna immagine trovata!</string>
	<string name="error_no_video">Nessun video trovato!</string>
	<string name="error_no_audio">Nessuna traccia audio trovata!</string>
	<string name="error_no_comment">Nessun commento trovato!</string>
	<string name="error_no_kml">Nessuna file KMZ trovato!</string>
	<string name="error_no_path">Nessun percorso trovato!</string>
	<string name="error_no_gps">Per avere una localizzazione accurata il GPS deve essere attivo. Vuoi attivare il GPS?</string>
	
	<string name="message_start_tracking">Tracking iniziato</string>
	<string name="message_stop_tracking">Tracking terminato</string>
	<string name="message_continue_tracking">Vuoi continuare il tracking in background?</string>
			
	<string name="message_path_not_saved">Traccia non salvata</string>
	<string name="message_path_not_exported">Traccia non esportata</string>
	
	<string name="message_photo_not_saved">Foto non salvata</string>
	<string name="message_video_not_saved">Video non salvato</string>
	<string name="message_audio_not_saved">Audio non salvato</string>
	<string name="message_comment_not_saved">Commento non salvato</string>
	
	<string name="message_photo_saved">Foto salvata</string>
	<string name="message_video_saved">Video salvato</string>
	<string name="message_audio_saved">Audio salvato</string>	
	<string name="message_comment_saved">Commento salvato</string>	

	<!-- V2.0 -->
	<string name="drawer_open">Apertura drawer</string>	
	<string name="drawer_close">Chiusura drawer</string>	
	
	<!-- OPZIONI -->
    <string name="settings_title">Opzioni</string>
    <string name="settings_map_title">Opzioni mappa</string>
    <string name="settings_map_followme_title">Attiva funzione Seguimi</string>
    <string name="settings_map_followme_summary">Permetti all\'app di seguirti, anche quando non stai facendo il tracking</string>
    <string name="settings_map_automatic_color_title">Colore linea automatico</string>
	<string name="settings_map_moving_type_title">Tipo di movimento</string>
	<string name="settings_map_moving_type_summary">Come ti stai muovendo?</string>
    <string name="settings_map_line_color_title">Imposta il colore della linea</string>
    <string name="settings_map_line_color_summary">Scegli il colore della linea del live-tracking</string>
    <string name="settings_kml_title">Opzioni Google Earth</string>
	<string name="settings_kml_line_color_title">Imposta il colore della linea</string>
    <string name="settings_kml_line_color_summary">Scegli il colore della linea del file KML</string>
	
</resources>