<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_comment"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/txt_comment_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edt_comment_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/comment_title_hint"
        android:imeOptions="actionNext"
        android:inputType="text" />

    <TextView
        android:id="@+id/txt_comment_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment_description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edt_comment_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/comment_description_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="3" />

    <RelativeLayout
        android:id="@+id/layout_comment_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_comment_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="false"
            android:text="@string/comment_save" />

        <Button
            android:id="@+id/btn_comment_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/comment_cancel" />
    </RelativeLayout>

</LinearLayout>