<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_camera"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/img_video_preview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="55"
        android:adjustViewBounds="true" />

    <LinearLayout
        android:id="@+id/layout_camera_save"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/img_video_preview"
        android:layout_weight="45"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_camera_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <EditText
            android:id="@+id/edt_camera_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <TextView
            android:id="@+id/txt_camera_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <EditText
            android:id="@+id/edt_camera_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <RelativeLayout
            android:id="@+id/layout_camera_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/btn_camera_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="false"
                android:text="@string/camera_save" />

            <Button
                android:id="@+id/btn_camera_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/camera_cancel" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
