    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

	<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >-->

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/linear"  
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/video_preview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                
                android:contentDescription="@string/videoContentDescription" />

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint"
                android:imeOptions="actionNext"
                android:inputType="text" />

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_hint"
                android:imeOptions="actionDone"
                android:inputType="text" />

            <!-- <RelativeLayout
                android:id="@+id/btnLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="false"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/cancel" />
            </RelativeLayout> -->
        </LinearLayout>